--- a/.env
+++ b/.env
@@ -1,3 +1,19 @@
-REACT_APP_SIGNUP_REDIRECT_URL='http://localhost:3000/signup/complete'
-REACT_APP_FORGOT_PASSWORD_REDIRECT ='http://localhost:3000/login'
-REACT_APP_API='http://localhost:8000/api'
+REACT_APP_SIGNUP_REDIRECT_URL='http://174.138.50.194/signup/complete'
+REACT_APP_FORGOT_PASSWORD_REDIRECT="http://174.138.50.194/login"
+REACT_APP_API='/api'
+
+
+go into the digital ocean shell first
+ssh fsadmin@174.138.50.194
+-dazmAg1@a
+
+update the .env file 
+
+//Replace 174.138.50.194 with domain name(first 2)
+
+In reactapp api put the domain name before the /api
+
+After updating in github run sudo git pull to update the site
+
+
+
