--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@ go into the digital ocean shell first
 ssh fsadmin@174.138.50.194
 -dazmAg1@a
 
+fullName: kishonstclair
+
 update the .env file 
 
 //Replace 174.138.50.194 with domain name(first 2)
@@ -16,4 +18,4 @@ In reactapp api put the domain name before the /api
 After updating in github run sudo git pull to update the site
 
 
-dddddddd
+
